# WebRTC_Web_Android

./: .gitignore  .gitmodules  README.md
admin-panel/: .env  index.html  package-lock.json  package.json  vite.config.js
admin-panel/src/: App.jsx
admin-panel/src/components/: AddGroupForm.jsx  CustomRouter.jsx  Dashboard.jsx  DeleteGroupForm.jsx  GroupList.jsx  Login.jsx  OwnerList.jsx
client/: README.md  client.js  index.html
controller/: controller.ino  turnserver.conf
generic-webcam/: CMakeLists.txt  README.md  build.sh  server_certs.txt
generic-webcam/examples/: CMakeLists.txt
generic-webcam/examples/generic/: CMakeLists.txt  main.c  reader.c
generic-webcam/examples/new_exam/: CMakeLists.txt  main.c
generic-webcam/src/: CMakeLists.txt  address.c  address.h  agent.c  agent.h  buffer.c  config.h  dtls_srtp.c  dtls_srtp.h  ice.c  ice.h  mdns.c  mdns.h  peer_connection.c  peer_connection.h  peer_signaling.c  peer_signaling.h  ports.c  ports.h  rtp.c  rtp.h  sctp.c  sctp.h  sdp.c  sdp.h  socket.c  socket.h  ssl_transport.h  stun.c  stun.h  utils.c  utils.h
owner-web/: index.html  package-lock.json  package.json  vite.config.js
owner-web/public/: cld-video-player.min.js
owner-web/src/: App.jsx
owner-web/src/camera/: Camera.jsx
owner-web/src/components/: Login.jsx
owner-web/src/dashboard/: Dashboard.jsx
owner-web/src/door/: DoorHistory.jsx
owner-web/src/group/: GroupDetail.jsx
owner-web/src/notifications/: Notifications.jsx
owner-web/src/router/: CustomRouter.jsx
owner-web/src/user-list/: UserList.jsx
owner-web/src/videos/: Videos.jsx
signaling-server/: .env  Dockerfile  docker-compose.yml  package-lock.json  package.json  signaling-server.js
signaling-server/src/: signaling-server.js
signaling-server/src/controllers/: addGroup.js  adminGetGroup.js  changePassword.js  cloudVideo.js  deleteGroup.js  deleteOwner.js  deleteUser.js  door.js  forgetOTP.js  getDoorHistory.js  getGroups.js  getOwners.js  getUser.js  group.js  light.js  lock.js  login.js  loginAdmin.js  loginOwner.js  loginUser.js  logout.js  notification.js  otp.js  register.js  registerOTP.js  resetPassword.js  sendGroupId.js  unlock.js
signaling-server/src/db/: db.js
signaling-server/src/fcm/: fcm.js
signaling-server/src/groups/: groups.js
signaling-server/src/handlers/: answer.js  connect.js  controllerlock.js  controllernotify.js  disconnect.js  humanDetect.js  ice.js  lock.js  login.js  logout.js  offer.js  register.js  unlock.js
signaling-server/src/middleware/: auth.js  middleware.js
signaling-server/src/otp/: otp.js
signaling-server/src/routes/: api.js  websocket.js
signaling-server/src/schemas/: admin.js  door.js  group.js  notification.js  owner.js  user.js
signaling-server/src/services/: addGroup.js  adminGetGroup.js  changePassword.js  cloudVideo.js  deleteGroup.js  deleteOwner.js  deleteUser.js  door.js  forgetOTP.js  getDoorHistory.js  getGroups.js  getOTP.js  getOwners.js  getUser.js  group.js  light.js  lock.js  login.js  loginAdmin.js  logout.js  notification.js  register.js  registerOTP.js  registerOwner.js  registerUser.js  resetPassword.js  sendGroupId.js  unlock.js
signaling-server/src/utils/: changePassword.js  doorLock.js  fcm.js  newOwner.js  newUser.js  otp.js
webrtc-android/: build.gradle.kts
webrtc-android/app/: build.gradle.kts
webrtc-android/app/src/main/: AndroidManifest.xml
webrtc-android/app/src/main/kotlin/io/getstream/webrtc/sample/compose/: MainActivity.kt  WebRTCApp.kt
webrtc-android/app/src/main/kotlin/io/getstream/webrtc/sample/compose/ui/components/: AudioRecorder.kt  RecordingAudioSink.kt  RecordingManager.kt  VideoRenderer.kt  VideoTextureViewRenderer.kt
webrtc-android/app/src/main/kotlin/io/getstream/webrtc/sample/compose/ui/theme/: Color.kt  (+1 more)
webrtc-android/app/src/main/kotlin/io/getstream/webrtc/sample/compose/webrtc/: SignalingClient.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/: MainActivity.kt  WebRTCApp.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/components/: AudioRecorder.kt  RecordingAudioSink.kt  RecordingManager.kt  VideoRenderer.kt  VideoTextureViewRenderer.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/fcm/: MyFirebaseMessagingService.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/door/: DoorHistoryScreen.kt  DoorScreen.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/list/: VideoItem.kt  VideoListScreen.kt  VideoListViewModel.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/main/: GroupDetailScreen.kt  MainScreen.kt  NotificationScreen.kt  OptionScreen.kt  UserDetailScreen.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/stage/: ForgetPasswordScreen.kt  LoginScreen.kt  RegisterScreen.kt  RoleSelectionScreen.kt  SignalingScreen.kt  StageScreen.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/users/: UserListScreen.kt  UserManagementScreen.kt  UserRegisterScreen.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/screens/video/: CallMediaState.kt  VideoCallControlAction.kt  VideoCallControls.kt  VideoCallScreen.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/webrtc/: SignalingClient.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/webrtc/audio/: AudioDevice.kt  AudioDeviceChangeListener.kt  AudioFocusRequestWrapper.kt  AudioHandler.kt  AudioManagerAdapter.kt  AudioManagerAdapterImpl.kt  AudioSwitch.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/webrtc/peer/: StreamPeerConnection.kt  StreamPeerConnectionFactory.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/webrtc/sessions/: WebRtcSessionManager.kt  WebRtcSessionManagerImpl.kt
webrtc-android/app/src/main/kotlin/webrtc/sample/compose/webrtc/utils/: PeerConnectionUtils.kt  SDPUtils.kt  stringify.kt
webrtc-android/app/src/main/res/values/: strings.xml
webrtc-android/gradle/: libs.versions.toml
(+32 files in other folders)
